--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,23 @@
         {
             "type": "package",
             "package": {
+              "name": "misfist/littlesis",
+                "version": "master",
+                "type": "wordpress-theme",
+                "dist": {
+                    "type": "zip",
+                    "url": "https://github.com/misfist/littlesis/archive/master.zip"
+                },
+                "source": {
+                    "type": "git",
+                    "url": "git@github.com:misfist/littlesis.git",
+                    "reference": "master"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
                 "name": "misfist/advanced-custom-fields-pro",
                 "version": "v5.5.7",
                 "type": "wordpress-plugin",
@@ -31,13 +48,18 @@
                 }
             }
         }
+
+
     ],
     "require": {
       "misfist/advanced-custom-fields-pro": "v5.5.7",
       "wpackagist-plugin/caldera-forms": "^1.5.0-b-2",
+      "wpackagist-plugin/co-authors-plus": "^3.2.1",
       "wpackagist-plugin/jetpack": "^4.3.2",
-      "wpackagist-plugin/post-type-archive-links": "^1.3.1",
-      "wpackagist-theme/understrap": "^0.5.6"
+      "wpackagist-plugin/series": "^1.0.0",
+      "wpackagist-plugin/so-widgets-bundle": "^1.8.1",
+      "wpackagist-theme/understrap": "^0.5.6",
+      "misfist/littlesis": "dev-master"
     },
     "require-dev": {
       "wpackagist-plugin/developer": "^1.2.5",
