--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             "type": "package",
             "package": {
               "name": "misfist/littlesis",
-                "version": "master",
+                "version": "WIPCategoryFilters",
                 "type": "wordpress-theme",
                 "dist": {
                     "type": "zip",
@@ -59,7 +59,7 @@
       "wpackagist-plugin/series": "^1.0.0",
       "wpackagist-plugin/so-widgets-bundle": "^1.8.1",
       "wpackagist-theme/understrap": "^0.5.6",
-      "misfist/littlesis": "dev-master"
+      "misfist/littlesis": "WIPCategoryFilters"
     },
     "require-dev": {
       "wpackagist-plugin/developer": "^1.2.5",
@@ -67,8 +67,7 @@
       "wpackagist-plugin/user-switching": "^1.0.9",
       "wpackagist-plugin/which-template": "^4.0",
       "wpackagist-plugin/wordpress-importer": "^0.6.3",
-      "wpackagist-plugin/wp-log-viewer": "^1.0.7",
-      "squizlabs/php_codesniffer": "^2.5.1"
+      "wpackagist-plugin/wp-log-viewer": "^1.0.7"
     },
     "extra": {
       "installer-paths": {
