--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             "type": "package",
             "package": {
               "name": "misfist/littlesis",
-                "version": "master",
+                "version": "v0.0.2",
                 "type": "wordpress-theme",
                 "dist": {
                     "type": "zip",
@@ -59,7 +59,7 @@
       "wpackagist-plugin/series": "^1.0.0",
       "wpackagist-plugin/so-widgets-bundle": "^1.8.1",
       "wpackagist-theme/understrap": "^0.5.6",
-      "misfist/littlesis": "dev-master"
+      "misfist/littlesis": "v0.0.2"
     },
     "require-dev": {
       "wpackagist-plugin/developer": "^1.2.5",
