Revert to earlier version of Caldera Forms
v1.5.0.1 is producing a fatal error on activation `Uncaught Error: Class 'Caldera_Forms_Entry_UI' not found in caldera-forms/classes/core.php:149`

--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
     ],
     "require": {
       "misfist/advanced-custom-fields-pro": "v5.5.7",
-      "wpackagist-plugin/caldera-forms": "^1.5.0-b-2",
+      "wpackagist-plugin/caldera-forms": "1.5.0",
       "wpackagist-plugin/co-authors-plus": "^3.2.1",
       "wpackagist-plugin/jetpack": "^4.3.2",
       "wpackagist-plugin/series": "^1.0.0",
