--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
             "type": "package",
             "package": {
               "name": "misfist/littlesis-core-functionality",
-                "version": "v0.1.2",
+                "version": "v0.1.3",
                 "type": "wordpress-plugin",
                 "dist": {
                     "type": "zip",
@@ -77,7 +77,7 @@
       "wpackagist-plugin/series": "^1.0.0",
       "wpackagist-plugin/shortcode-ui": "^0.7.0",
       "wpackagist-plugin/widget-css-classes": "^1.4.0",
-      "misfist/littlesis-core-functionality": "^0.1.2",
+      "misfist/littlesis-core-functionality": "v0.1.3",
       "wpackagist-theme/understrap": "^0.5.6",
       "misfist/littlesis": "v0.1.4"
     },
