--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             "type": "package",
             "package": {
               "name": "misfist/littlesis",
-                "version": "v0.1.4.1",
+                "version": "v0.1.5",
                 "type": "wordpress-theme",
                 "dist": {
                     "type": "zip",
@@ -77,9 +77,10 @@
       "wpackagist-plugin/series": "^1.0.0",
       "wpackagist-plugin/shortcode-ui": "^0.7.0",
       "wpackagist-plugin/widget-css-classes": "^1.4.0",
+      "wpackagist-plugin/wp-user-avatars": "^1.0.2",
       "misfist/littlesis-core-functionality": "v0.1.3",
       "wpackagist-theme/understrap": "^0.5.6",
-      "misfist/littlesis": "v0.1.4.1"
+      "misfist/littlesis": "v0.1.5"
     },
     "require-dev": {
       "wpackagist-plugin/developer": "^1.2.5",
