--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,9 @@
       "wpackagist-plugin/caldera-forms": "1.5.0",
       "wpackagist-plugin/co-authors-plus": "^3.2.1",
       "wpackagist-plugin/codepress-admin-columns": "^2.5.6.4",
+      "wpackagist-plugin/google-analytics-dashboard-for-wp": "^4.9.6.2",
       "wpackagist-plugin/jetpack": "^4.3.2",
+      "wpackagist-plugin/mailchimp-for-wp": "^4.1.0",
       "wpackagist-plugin/series": "^1.0.0",
       "wpackagist-plugin/shortcode-ui": "^0.7.0",
       "wpackagist-plugin/widget-css-classes": "^1.4.0",
