--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
     ],
     "require": {
       "misfist/advanced-custom-fields-pro": "v5.5.7",
-      "wpackagist-plugin/caldera-forms": "1.5.0",
+      "wpackagist-plugin/caldera-forms": "^1.5.0",
       "wpackagist-plugin/co-authors-plus": "^3.2.1",
       "wpackagist-plugin/codepress-admin-columns": "^2.5.6.4",
       "wpackagist-plugin/google-analytics-dashboard-for-wp": "^4.9.6.2",
