--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
             "type": "package",
             "package": {
                 "name": "misfist/advanced-custom-fields-pro",
-                "version": "v5.5.7",
+                "version": "5.5.11",
                 "type": "wordpress-plugin",
                 "dist": {
                     "type": "zip",
@@ -69,7 +69,7 @@
 
     ],
     "require": {
-      "misfist/advanced-custom-fields-pro": "v5.5.7",
+      "misfist/advanced-custom-fields-pro": "^5.5.11",
       "wpackagist-plugin/caldera-forms": "^1.5.0",
       "wpackagist-plugin/co-authors-plus": "^3.2.1",
       "wpackagist-plugin/codepress-admin-columns": "^2.5.6.4",
