--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             "type": "package",
             "package": {
               "name": "misfist/littlesis",
-                "version": "v0.1.8",
+                "version": "0.1.9",
                 "type": "wordpress-theme",
                 "dist": {
                     "type": "zip",
@@ -82,7 +82,7 @@
       "wpackagist-plugin/wp-user-avatars": "^1.0.2",
       "misfist/littlesis-core-functionality": "v0.1.3",
       "wpackagist-theme/understrap": "^0.5.6",
-      "misfist/littlesis": "v0.1.8"
+      "misfist/littlesis": "^0.1.9"
     },
     "require-dev": {
       "wpackagist-plugin/developer": "^1.2.5",
