--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
             "type": "package",
             "package": {
               "name": "misfist/littlesis-core-functionality",
-                "version": "v0.1.3",
+                "version": "0.1.4",
                 "type": "wordpress-plugin",
                 "dist": {
                     "type": "zip",
@@ -80,7 +80,7 @@
       "wpackagist-plugin/shortcode-ui": "^0.7.0",
       "wpackagist-plugin/widget-css-classes": "^1.4.0",
       "wpackagist-plugin/wp-user-avatars": "^1.0.2",
-      "misfist/littlesis-core-functionality": "v0.1.3",
+      "misfist/littlesis-core-functionality": "0.1.4",
       "wpackagist-theme/understrap": "^0.5.6",
       "misfist/littlesis": "^0.1.9"
     },
