--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "misfist/littlesis-packages",
+    "name": "public-accountability/littlesis-packages",
     "description": "WordPress packages for blog.littlesis.org",
     "type": "project",
     "license": "GPLv3",
@@ -17,16 +17,16 @@
         {
             "type": "package",
             "package": {
-              "name": "misfist/littlesis",
+              "name": "public-accountability/littlesis",
                 "version": "v0.1.11",
                 "type": "wordpress-theme",
                 "dist": {
                     "type": "zip",
-                    "url": "https://github.com/misfist/littlesis/archive/master.zip"
+                    "url": "https://github.com/public-accountability/littlesis-news-theme/archive/master.zip"
                 },
                 "source": {
                     "type": "git",
-                    "url": "git@github.com:misfist/littlesis.git",
+                    "url": "git@github.com:public-accountability/littlesis-news-theme.git",
                     "reference": "master"
                 }
             }
@@ -34,16 +34,16 @@
         {
             "type": "package",
             "package": {
-              "name": "misfist/littlesis-core-functionality",
+              "name": "public-accountability/littlesis-core-functionality",
                 "version": "0.1.4",
                 "type": "wordpress-plugin",
                 "dist": {
                     "type": "zip",
-                    "url": "https://github.com/misfist/littlesis-core-functionality/archive/master.zip"
+                    "url": "https://github.com/public-accountability/littlesis-core-functionality/archive/master.zip"
                 },
                 "source": {
                     "type": "git",
-                    "url": "https://github.com/misfist/littlesis-core-functionality.git",
+                    "url": "https://github.com/public-accountability/littlesis-core-functionality.git",
                     "reference": "master"
                 }
             }
@@ -80,9 +80,9 @@
       "wpackagist-plugin/shortcode-ui": "^0.7.0",
       "wpackagist-plugin/widget-css-classes": "^1.4.0",
       "wpackagist-plugin/wp-user-avatars": "^1.0.2",
-      "misfist/littlesis-core-functionality": "0.1.4",
+      "public-accountability/littlesis-core-functionality": "0.1.4",
       "wpackagist-theme/understrap": "^0.5.6",
-      "misfist/littlesis": "v0.1.11"
+      "public-accountability/littlesis": "v0.1.11"
     },
     "require-dev": {
       "wpackagist-plugin/developer": "^1.2.5",
