--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
                 },
                 "source": {
                     "type": "git",
-                    "url": "git@github.com:public-accountability/littlesis-news-theme.git",
+                    "url": "https://github.com/public-accountability/littlesis-news-theme.git",
                     "reference": "master"
                 }
             }
